🫶🏽 changed the name of hearshot :)

--- a/packages/mobile/android/app/build.gradle
+++ b/packages/mobile/android/app/build.gradle
@@ -113,9 +113,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace 'com.minihacks.geese'
+    namespace 'app.hearshot.app'
     defaultConfig {
-        applicationId 'com.minihacks.geese'
+        applicationId 'app.hearshot.app'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
