--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -38,7 +38,7 @@ elsif podfile_properties.key?('ios.flipper') then
   end
 end
 
-target 'mobile' do
+target 'Hearshot' do
   use_expo_modules!
   config = use_native_modules!
 
