--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -12,6 +12,7 @@
     "clean": "npx react-native-clean-project"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "expo": "~48.0.11",
