--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -13,13 +13,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.11",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "^1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-collapsible": "^1.6.1",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "^4.5.1"
   },
   "devDependencies": {
