--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.71.6",
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "^1.6.0",
     "react-native-safe-area-context": "^4.5.1"
   },
   "devDependencies": {
