--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/auth": "^17.4.2",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~48.0.11",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "^1.4.4",
