--- a/packages/radio_receiver/Cargo.toml
+++ b/packages/radio_receiver/Cargo.toml
@@ -12,3 +12,6 @@ babycat = "*"
 
 [dependencies.liquid_dsp]
 git = "https://github.com/cubehub/rust-liquid-dsp.git"
+
+[profiles.release]
+lto = "fat"
