--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -24,6 +24,7 @@
     "expo": "~48.0.11",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "^1.4.4",
+    "google-libphonenumber": "^3.2.32",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-collapsible": "^1.6.1",
@@ -32,7 +33,8 @@
     "react-native-safe-area-context": "^4.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/google-libphonenumber": "^7.4.23"
   },
   "private": true
 }
