--- a/packages/io/package.json
+++ b/packages/io/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "firebase-admin": "^11.7.0",
     "socket.io": "^4.5.2"
   },
   "devDependencies": {
