--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@notifee/react-native": "^7.7.1",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/auth": "^17.4.2",
     "@react-native-firebase/messaging": "^17.4.2",
