--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~48.0.11",
+    "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "^1.4.4",
     "google-libphonenumber": "^3.2.32",
