--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4",
     "@notifee/react-native": "^7.7.1",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/auth": "^17.4.2",
@@ -24,6 +25,7 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "expo": "~48.0.11",
     "expo-linear-gradient": "~12.1.2",
+    "expo-location": "~15.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "^1.4.4",
     "google-libphonenumber": "^3.2.32",
@@ -32,6 +34,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "^1.6.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.1"
   },
   "devDependencies": {
