--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -17,6 +17,7 @@
     "@notifee/react-native": "^7.7.1",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/auth": "^17.4.2",
+    "@react-native-firebase/firestore": "^17.4.2",
     "@react-native-firebase/messaging": "^17.4.2",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
