--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "date-fns": "^2.29.3",
     "expo": "~48.0.11",
     "expo-linear-gradient": "~12.1.2",
     "expo-location": "~15.1.1",
