--- a/packages/backend/requirements.txt
+++ b/packages/backend/requirements.txt
@@ -1,21 +1,13 @@
+SpeechRecognition
+black
 fastapi==0.74.0
-uvicorn[standard]==0.17.5
-
-
+firebase_admin
+isort
+onnxruntime
+openai
+pyaudio
+requests 
+ruff
 torch
 torchaudio
-onnxruntime
-
-
-requests 
-
-ruff
-black
-
-
-isort
-
-pyaudio
-SpeechRecognition
-
-firebase_admin
+uvicorn[standard]==0.17.5
